@@ -3,13 +3,14 @@ package de.claudioaltamura.java.java17.sealed.classes;
 class GreetService {
 
     String greet(Person person) {
-        // --enable-preview
-        var salutation = switch(person.gender()) {
-            case Male m -> "Mr.";
-            case Female f -> "Mrs.";
-            default -> throw new RuntimeException("unknown instance of " + person.gender());
-        };
 
-        return salutation + " " + person.name();
+        if(person.gender() instanceof Male) {
+            return "Mr.";
+        } else if (person.gender() instanceof Female) {
+            return "Mrs.";
+        } else {
+            throw new RuntimeException("unknown instance of " + person.gender());
+        }
+
     }
 }
